--- a/ProyectoPINGESO-web/pom.xml
+++ b/ProyectoPINGESO-web/pom.xml
@@ -25,10 +25,17 @@
             <artifactId>primefaces</artifactId>
             <version>5.0</version>
         </dependency>
-        <dependency>
+        
+        <!--<dependency>
             <groupId>cl.hpelitebook</groupId>
             <artifactId>MP2-ejb</artifactId>
             <version>1.0</version>
+        </dependency> -->
+        
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>ProyectoPINGESO-ejb</artifactId>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>javax</groupId>
