--- a/ProyectoPINGESO-web/src/main/webapp/WEB-INF/web.xml
+++ b/ProyectoPINGESO-web/src/main/webapp/WEB-INF/web.xml
@@ -4,10 +4,7 @@
         <param-name>javax.faces.PROJECT_STAGE</param-name>
         <param-value>Development</param-value>
     </context-param>
-    <context-param>
-        <param-name>primefaces.UPLOADER</param-name>
-        <param-value>auto|native|commons</param-value>
-    </context-param>
+ 
     <servlet>
         <servlet-name>Faces Servlet</servlet-name>
         <servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
@@ -16,7 +13,7 @@
     <servlet-mapping>
         <servlet-name>Faces Servlet</servlet-name>
         <url-pattern>/faces/*</url-pattern>
-    </servlet-mapping>    
+    </servlet-mapping>
     <session-config>
         <session-timeout>
             30
@@ -25,4 +22,8 @@
     <welcome-file-list>
         <welcome-file>faces/menuHome.xhtml</welcome-file>
     </welcome-file-list>
+    <context-param>  
+        <param-name>primefaces.THEME</param-name>  
+        <param-value>humanity</param-value>  
+    </context-param>
 </web-app>
