--- a/ProyectoPINGESO-web/pom.xml
+++ b/ProyectoPINGESO-web/pom.xml
@@ -35,7 +35,8 @@
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>ProyectoPINGESO-ejb</artifactId>
-            <version>${project.version}</version>
+            <version>1.0</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>javax</groupId>
