--- a/ProyectoPINGESO-ejb/pom.xml
+++ b/ProyectoPINGESO-ejb/pom.xml
@@ -26,6 +26,12 @@
             <version>7.0</version>
             <scope>provided</scope>
         </dependency>
+        
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-neo4j</artifactId>
+            <version>3.2.0.RELEASE</version>
+        </dependency>
     </dependencies>
 
     <build>
