--- a/ProyectoPINGESO-web/pom.xml
+++ b/ProyectoPINGESO-web/pom.xml
@@ -28,7 +28,7 @@
         </dependency>
         <dependency>  
             <groupId>org.primefaces.themes</groupId>  
-            <artifactId>humanity</artifactId>  
+            <artifactId>flick</artifactId>  
             <version>1.0.10</version>  
         </dependency> 
           
