Eliminado el test de procesamientoSB debido a que cambio la funcion completa Modificado el menú para que acceda correctamente al home y a las distintas vistas. Eliminación de comentarios en funcion no utilizada. Se cambia al ruta de inicio de la aplicación

--- a/ProyectoPINGESO-web/src/main/webapp/WEB-INF/web.xml
+++ b/ProyectoPINGESO-web/src/main/webapp/WEB-INF/web.xml
@@ -20,7 +20,7 @@
         </session-timeout>
     </session-config>
     <welcome-file-list>
-        <welcome-file>faces/wupalmer.xhtml</welcome-file>
+        <welcome-file>faces/home2.xhtml</welcome-file>
     </welcome-file-list>
     <context-param>  
         <param-name>primefaces.THEME</param-name>  
