--- a/ProyectoPINGESO-ejb/pom.xml
+++ b/ProyectoPINGESO-ejb/pom.xml
@@ -50,6 +50,28 @@
             <artifactId>spring-data-neo4j</artifactId>
             <version>3.2.0.RELEASE</version>
         </dependency>
+        
+        <!-- DEPENDENCIA 1 -->
+        <dependency>
+            <groupId>org.neo4j</groupId>
+            <artifactId>neo4j-jdbc</artifactId>
+            <version>2.0.2</version>
+        </dependency>
+        
+        <!-- DEPENDENCIA 2. For file and in-memory support, add these two as well -->
+        <dependency>
+          <groupId>org.neo4j</groupId>
+          <artifactId>neo4j</artifactId>
+          <version>2.0.3</version>
+        </dependency>
+    
+        <!-- DEPENDENCIA 3 -->
+        <dependency>
+          <groupId>org.neo4j</groupId>
+          <artifactId>neo4j-kernel</artifactId>
+          <version>2.0.3</version>
+          <type>test-jar</type>
+        </dependency>
     </dependencies>
 
     <build>
@@ -101,5 +123,16 @@
             </plugin>
         </plugins>
     </build>
-
+    
+    <!-- DEPENDENCIA 4 -->
+    <repositories>
+        <repository>
+          <id>neo4j-public</id>
+          <url>http://m2.neo4j.org/content/groups/public</url>
+          <releases>
+            <enabled>true</enabled>
+            <checksumPolicy>warn</checksumPolicy>
+          </releases>
+        </repository>
+    </repositories>
 </project>
