Clase NeoServer. Método raiz del grafo.

--- a/ProyectoPINGESO-ejb/pom.xml
+++ b/ProyectoPINGESO-ejb/pom.xml
@@ -51,27 +51,31 @@
             <version>3.2.0.RELEASE</version>
         </dependency>
         
-        <!-- DEPENDENCIA 1 -->
+        <!-- INICIO DEPENDENCIA 1 -->
         <dependency>
             <groupId>org.neo4j</groupId>
             <artifactId>neo4j-jdbc</artifactId>
             <version>2.0.2</version>
         </dependency>
+        <!-- FIN DEPENDENCIA 1 -->
         
-        <!-- DEPENDENCIA 2. For file and in-memory support, add these two as well -->
+        <!-- INICIO DEPENDENCIA 2. For file and in-memory support, add these two as well -->
         <dependency>
           <groupId>org.neo4j</groupId>
           <artifactId>neo4j</artifactId>
           <version>2.0.3</version>
         </dependency>
+        <!-- FIN DEPENDENCIA 2 -->
     
-        <!-- DEPENDENCIA 3 -->
+        <!-- INICIO DEPENDENCIA 3 -->
         <dependency>
           <groupId>org.neo4j</groupId>
           <artifactId>neo4j-kernel</artifactId>
           <version>2.0.3</version>
           <type>test-jar</type>
         </dependency>
+        <!-- INICIO DEPENDENCIA 3 -->
+        
     </dependencies>
 
     <build>
@@ -124,7 +128,7 @@
         </plugins>
     </build>
     
-    <!-- DEPENDENCIA 4 -->
+    <!-- INICIO DEPENDENCIA 4 -->
     <repositories>
         <repository>
           <id>neo4j-public</id>
@@ -135,4 +139,5 @@
           </releases>
         </repository>
     </repositories>
+    <!-- FIN DEPENDENCIA 4 -->
 </project>
